<resources xmlns:tools="http://schemas.android.com/tools" 
    tools:ignore="MissingTranslation">
    <string name="app_name">Settings</string>
    <string name="app_name_orig">fineSettings</string>
    <string name="app_name_desk">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_app_name">Settings</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="button_avia">Airplane mode</string>
    <string name="button_wifi">Wi-Fi</string>
    <string name="button_bluetooth">Bluetooth</string>
    <string name="button_general">General</string>
    <string name="button_sounds">Sounds</string>
    <string name="button_wallpaper">Wallpaper</string>
    <string name="button_brightness">Display &amp; Brightness</string>
    <string name="button_sota">Cellular</string>
    <string name="button_operator">Carrier</string>
    <string name="button_geolocatoin">Geolocation</string>
    <string name="bluetooth_search_on">Detection is possible</string>
    <string name="bluetooth_search_off">Detection is not possible</string>
    <string name="bluetooth_devices">MY DEVICES</string>
    <string name="bluetooth_devices_other">DEVICES</string>
    <string name="bluetooth_hidden">Hidden network</string>
    <string name="bluetooth_no_pair">NO CONNECTED DEVICES...</string>
    <string name="bluetooth_pairing">Connection...</string>
    <string name="bluetooth_no_device">DEVICE NOT FOUND</string>
    <string name="bluetooth_pair">Connected</string>
    <string name="bluetooth_disable_pair">Disabled</string>
    <string name="connected">Connect</string>
    <string name="disconnected">Disconnect</string>
    <string name="bluetooth_watch1">For pairing the iPhone and Apple Watch program</string>
    <string name="bluetooth_watch2">using Apple Watch.</string>
    <string name="search">Search</string>
    <string name="geolocation_services">Geolocation services</string>
    <string name="gps">GPS</string>
    <string name="geolocation_what">What is geolocation service?</string>
    <string name="geolocaton_what2">Allow geolocation service program \"Maps\" and other programs to collect and use data about your approximate location.</string>
    <string name="button_update">Software update</string>
    <string name="autor">Maxim Khaydarov</string>
    <string name="what_news">What&quot;s new?</string>
	<string name="what_news_text3">- Update to iOS 9.1 beta 1\n- New features in \"Wallpaper\"\n- Update in points \"Wi-Fi\" and \"Bluetooth\"\n- Correction of errors in text, graphics and functionality</string>
    <string name="button_license">License</string>
    <string name="license_my">All rights reserved.\nThe program is protected by copyright and any unauthorized use may be punished according to the law of copyright.
Placing full version to any resources other than Yandex.Store prohibited.</string>
    <string name="license_ios">iPhone and iOS trademarks, registered company Apple Inc.</string>
    <string name="brightness">BRIGHTNESS</string>
    <string name="button_autobrightness">Auto Brightness</string>
    <string name="set_wallpaper">SELECT WALLPAPER</string>
    <string name="button_set_wallpaper">Choose a New Wallpaper</string>
    <string name="information">Information</string>
    <string name="button_my_number">My number</string>
    <string name="button_enable_lte">Enable LTE</string>
    <string name="lte_not_supported">LTE network is not supported.</string>
    <string name="synchronization">SYNCHRONIZATION OF ACCOUNT</string>
    <string name="button_sync">Synchronization</string>
    <string name="autorotation_text">AUTOROTATION SCREEN</string>
    <string name="button_autorotation">Auto-rotate</string>
    <string name="button_about_this">About</string>
    <string name="info_mark">Brand:</string>
    <string name="info_model">Model:</string>
    <string name="info_kernel_version">Core Version:</string>
    <string name="info_cpu">CPU:</string>
    <string name="info_core_architecture">Core Architecture:</string>
    <string name="info_kernel">Core:</string>
    <string name="cdma">CDMA</string>
    <string name="edge">EDGE</string>
    <string name="gprs">GPRS</string>
    <string name="hspa">HSPA</string>
    <string name="hspa_plus">HSPA+</string>
    <string name="hsupa">HSUPA</string>
    <string name="iden">iDen</string>
    <string name="lte">LTE</string>
    <string name="umts">3G</string>
    <string name="unknown">Unknown</string>
    <string name="hsdpa">HSDPA</string>
    <string name="button_enable_data">Cellular Data</string>
    <string name="three_g_info">Turn off cellular data to restrict all data to Wi-Fi, including email, web browsing, and push notification. Using LTE loads data faster.</string>
    <string name="button_network_type">Voice &amp; Data</string>
    <string name="roaming">Data Roaming</string>
    <string name="apn_settings">Cellular Data Network</string>
    <string name="network_type_info">Showing the type of network does not appear in airplane mode.</string>
    <string name="no_connections">No connection</string>
    <string name="connection">Connect</string>
    <string name="ip">IP:</string>
    <string name="ssid">SSID:</string>
    <string name="bsid">BSID:</string>
    <string name="mac">MAC:</string>
    <string name="speed">SPEED:</string>
    <string name="rssi">RSSI:</string>
    <string name="call_and_reminders">CALL AND REMINDERS</string>
    <string name="button_volume">More</string>
    <string name="volume_info">Ringer volume and reminders can be configured using the volume control buttons.</string>
    <string name="volume_bell">Ringtone</string>
    <string name="volume_alarm">ALARM-CLOCK</string>
    <string name="volume_music">MUSIC</string>
    <string name="volume_voice">VOICE CALL</string>
    <string name="volume_system">SYSTEM SOUNDS</string>
    <string name="button_sound">Sounds</string>
    <string name="button_vibration_call">Vibrate on Ring</string>
    <string name="button_vibration_silence">Vibrate on Silence</string>
    <string name="back">Back</string>
    <string name="full">Full version</string>
    <string name="ok">OK</string>
    <string name="clean">Clean</string>
    <string name="welcome">Hello!</string>
    <string name="button_start_next">Next</string>
    <string name="notification">Notification Center</string>
    <string name="control_center">Control Center</string>
    <string name="disturb">Do Not Disturb</string>
    <string name="mail">Mail</string>
    <string name="notes">Notes</string>
    <string name="phone">Phone</string>
    <string name="messages">Messages</string>
    <string name="safari">Safari</string>
    <string name="music">Music</string>
    <string name="compass">Compass</string>
    <string name="more">About</string>
    <string name="weather">Weather</string>
    <string name="on_disturb">Manual</string>
    <string name="disturb_shedules">Scheduled</string>
    <string name="disturb_text">When Do Not Disturb is enabled calls and alerts that arrive while locked will be silenced, and a moon icon will appear in the status bar.</string>
    <string name="disturb_from">From</string>
    <string name="disturb_to">To</string>
    <string name="save">Save</string>
    <string name="game_center">Game Center</string>
    <string name="disturb_from_to">From\nTo</string>
    <string name="choose">Choose</string>
    <string name="cancel">Cancel</string>
    <string name="menu_info">Program Settings</string>
    <string name="app_settings">Applications</string>
	<string name="reset_all_settings">Reset</string>
	<string name="reset_all_settings_text">RESET ALL SETTINGS</string>
	<string name="inform_reset_settings">Changes come after you restart the application!</string>
	<string name="delete">Delete</string>
	<string name="whait_app">Loading application...</string>
	<string name="memory">Storage</string>
	<string name="osnova_sd">INSTALLED APPLICATIONS</string>
	<string name="osnova_memory">INFORMATION ABOUT THE PHONE MEMORY</string>
  	<string name="privacy">Privacy</string>
  	<string name="passcode">Touch ID &amp; Passcode</string>
  	<string name="date_time">Date and time</string>
  	<string name="input_metod">Keyboards</string>
  	<string name="new1">Your application 1</string>
  	<string name="new2">Your application 2</string>
  	<string name="new3">Your application 3</string>
  	<string name="new4">Your application 4</string>
  	<string name="apn">Personal Hotspot</string>
  	<string name="set_add">ADDITIONAL FUNCTIONS</string>
  	<string name="text_size">Text Size</string>
  	<string name="text_bold">Bold Text</string>
  	<string name="informations">Information</string>
  	<string name="do_not_disturb_title">Do Not Disturb!</string>
  	<string name="do_not_disturb_on">The \"Do Not Disturb\" included</string>
  	<string name="learn_more">Learn More</string>
  	<string name="down_install">Download and Install</string>
  	<string name="about_title">about_title</string>
	<string name="about_desc">about_desc</string>
	<string name="icloud">iCloud</string>
  	<string name="itunes_appstore">iTunes &amp; App Store</string>
  	<string name="speed_anim">Animation</string>
  	<string name="speed_anim_text">ANIMATION SPEED</string>
  	<string name="settings_app_dop">ADDITIONAL FUNCTIONS</string>
  	<string name="settings_app">Program settings</string>
  	<string name="menu_visible">DISPLAYING THE MENU</string>
  	<string name="menu_visible_on">Enable</string>
  	<string name="name_about">The device name</string>
  	<string name="network_about">Network</string>
  	<string name="version_about">Version</string>
  	<string name="version_about_c">iOS 9.1 beta 1 (13A4254v)</string>
  	<string name="serial_about">Serial Number</string>
  	<string name="imei_about">IMEI</string>
  	<string name="phone_about">Telephone Number</string>
  	<string name="mac_wifi">MAC Wi-Fi</string>
  	<string name="mac_bluetooth">MAC Bluetooth</string>
  	<string name="about_this">About device</string>
  	<string name="menu_info_main">Phone Settings</string>
  	<string name="menu_info_reset">This will reset all settings. No data or media will be deleted.</string>
  	<string name="vk">VK</string>
  	<string name="viber">Viber</string>
  	<string name="odnoklassniki">Odnoklassniki</string>
  	<string name="skype">Skype</string>
  	<string name="whatsapp">WhatsApp</string>
  	<string name="twitter">Twitter</string>
  	<string name="facebook">Facebook</string>
  	<string name="instagram">Instagram</string>
  	<string name="maps">Maps</string>
  	<string name="account">Account</string>
  	<string name="icloud_t">ICLOUD</string>
  	<string name="wall_live">Live</string>
  	<string name="wall_statik">Stills</string>
  	<string name="wall_dynamik">Dynamic</string>
  	<string name="wall_photo">PHOTO</string>
  	<string name="wall_camera">My Photo</string>
  	<string name="choose_wifi">CHOOSE A NETWORK...</string>
  	<string name="new_account">New Account</string>
  	<string name="zimowets_block">This program has been loaded using pirated account.\n Download using your account!</string>
  	<string name="block_license">This program was not loaded with Yandex Store.\nGo to your account and download the application ! :)</string>
  	<string name="attention">CAUTION</string>
    <string name="language_region">Language and Region</string>
  	<string name="sounds_vibration">SOUNDS AND PICTURES VIBRATION</string>
  	<string name="ringtone">Ringtone</string>
	<string name="cancel_oboi">Cancel</string>
	<string name="set_oboi">Set</string>
	<string name="preview_oboi">Wallpaper Preview</string>
	<string name="update_1">Update to iOS9 beta 5</string>
	<string name="update_2">New features in \"Wallpaper\"</string>
	<string name="update_3">Correction of errors in text, graphics and functionality</string>
	<string name="new_update">New features</string>
</resources>