<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_fon"
    android:orientation="vertical"
    tools:context=".ActivityGeo" >

    <ua.mkh.settings.full.EdgeEffectScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:fadingEdge="none"
        android:overScrollMode="always"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="80dp"
                android:hint="@string/geolocation_services"
                android:textColorHint="@color/hint_text"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="39dp" >

                    <ToggleButton
                        android:id="@+id/gpstoggle"
                        android:layout_width="60dp"
                        android:layout_height="44dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/btn_toggle_bg"
                        android:text="ToggleButton"
                        android:textOff=" "
                        android:textOn=" " />

                    <Button
                        android:id="@+id/ButtonGeo"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="15dp"
                        android:background="@color/transparent"
                        android:clickable="false"
                        android:ems="10"
                        android:gravity="left|center_vertical"
                        android:text="@string/gps"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/ImageView02"
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:ems="10"
                        android:scaleType="fitXY"
                        android:src="@drawable/line_cray" />

                    <ImageView
                        android:id="@+id/ImageView01"
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:ems="10"
                        android:scaleType="fitXY"
                        android:src="@drawable/line_cray" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="30dp"
                android:hint="@string/geolocation_what"
                android:textColorHint="@color/hint_text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:hint="@string/geolocaton_what2"
                android:textColorHint="@color/hint_text"
                android:textSize="14sp" />

        </LinearLayout>
    </ua.mkh.settings.full.EdgeEffectScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background_title"
        android:orientation="vertical" >

        <include
            android:id="@+id/include1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            layout="@layout/title_status" />
    </LinearLayout>

</RelativeLayout>